--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,11 @@ iframe {
 
 /* Brand */
 
+.navbar {
+  background: #2e672d;
+}
+
+.navbar .navbar-nav .nav-item > .nav-link a {
+  color: white;
+}
+
