--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,11 @@ a {
 
 /* facebook */
 
+.facebook-frame {
+  border: none;
+  width: 100%;
+}
+
 @media (max-width: 576px) { 
 
   .big-facebook {
