--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ iframe {
 .footer {
   font-size: 85%;
   text-align: center;
-  background-color: #f7f7f7;
+  background-color: #eee;
 }
 
 /* Brand */
