--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,20 @@
 /* utility */
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+html {
+  height: 100%;
+  box-sizing: border-box;
+}
 
 body {
+  position: relative;
   margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  padding-bottom: 10rem;
+  min-height: 100%;
 }
 
 .page-body {
@@ -30,7 +41,12 @@ iframe {
 .footer {
   font-size: 85%;
   text-align: center;
-  background-color: #eee;
+  background-color: #eee;    
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 2rem;
 }
 
 /* Brand */
